Fix job dependency in GitHub Actions workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,7 @@ jobs:
               run: echo "Hola Mundo"
 
     second_job:
+        needs: firts_job
         runs-on: ubuntu-Latest
 
         steps:
